--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1236,6 +1236,7 @@
 %    \end{macrocode}
 %
 % \subsection{Finale}
+% \subsubsection{Options Processing}
 % Put us in \texttt{english} and \texttt{final} mode, and enable marginal
 % notes. Note that as documented, marginal notes are incompatible with the ACM
 % SIG classes. Initially, I thought I would detect these classes and issue
@@ -1250,16 +1251,11 @@
 \ProcessOptionsX*[fx]<legacy,layout,log,lang,ltx>
 
 %    \end{macrocode}
-% Ensure backward compatibility with |\FiXmeUser|. We need to do this
-% differently from the other |\FiXme*| commands, because users of version 1
-% were instructed to |\renewcommand| it to something useful. So we
-% |\newcommand| it to |\empty|, and unless changed in the document's preamble,
-% we then define it to call the modern one. Note also that this will work with
-% the |\fixme| command, but not with the |\fx*| ones that appeared in version
-% 2 (they would try to call the undefined macro |\FXUser|). This is ok because
-% if somebody is aware of \fixme{} notes, then they (should) know that the new
-% way to provide a user layout is to define |\FXUser|, not anymore to redefine
-% |\FiXmeUser|.
+%
+% \subsubsection{Backward Compatibility Tweaks}
+% \begin{macro}{\@fxdeprecate}
+%   Deprecate a |\fixme*| command in favor an |\fx*| one.
+% \end{macro}
 %    \begin{macrocode}
 \newcommand\@fxdeprecate[1]{%
   \ifthenelse{\equal{\csname fixme#1\endcsname}{}}{}{%
@@ -1267,6 +1263,17 @@
     %% #### FIXME: I'd want the body to be expanded only once. Check how to.
     \expandafter\edef\csname fx#1\endcsname{\csname fixme#1\endcsname}}}
 
+%    \end{macrocode}
+% Backward compatibility with |\FiXmeUser| is done differently from the other
+% |\FiXme*| commands, because users of version 1 were instructed to
+% |\renewcommand| it to something useful. So we |\newcommand| it to |\empty|,
+% and unless changed in the document's preamble, we then define it to call the
+% modern one. Note also that this will work with the |\fixme| command, but not
+% with the |\fx*| ones that appeared in version 2 (they would try to call the
+% undefined macro |\FXUser|). This is ok because if somebody is aware of
+% \fixme{} notes, then they (should) know that the new way to provide a user
+% layout is to define |\FXUser|, not anymore to redefine |\FiXmeUser|.
+%    \begin{macrocode}
 \AtBeginDocument{%
   \ifx\FiXmeUser\empty%
     \renewcommand\FiXmeUser[1]{\FXUser{\fxfatalprefix}{#1}}%
