some dtx doc typo fixes

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -979,7 +979,7 @@
 %   \begin{macro}{\fxfatalindexname}
 %     \begin{macro}{\@fxfatal@draft}
 %       \begin{macro}{\@fxfatal@final}
-%         fixmes:
+%         fxfatals:
 %       \end{macro}
 %     \end{macro}
 %   \end{macro}
@@ -1004,7 +1004,7 @@
 \newcommand\FiXmeIndex[1]{\FXIndex{#1}}
 
 %    \end{macrocode}
-% And because of that, we can't define \cs{fixme@fatal@draft} in terms of
+% And because of that, we can't define \cs{fxfatal@draft} in terms of
 % \cs{@fxlayout}.
 %    \begin{macrocode}
 \def\@fxfatal@draft#1{%
