don't use backquote to quote messages

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -824,19 +824,19 @@
 \newcommand\FXNote[1]{%
   \GenericInfo{%
     (FiXme)\@spaces\@spaces\@spaces\@spaces}{%
-    FiXme Note: `#1'}}
+    FiXme Note: '#1'}}
 \newcommand\FXWarning[1]{%
   \GenericWarning{%
     (FiXme)\@spaces\@spaces\@spaces\@spaces}{%
-    FiXme Warning: `#1'}}
+    FiXme Warning: '#1'}}
 \newcommand\FXError[1]{%
   \GenericWarning{%
     (FiXme)\@spaces\@spaces\@spaces\@spaces}{%
-    FiXme Error: `#1'}}
+    FiXme Error: '#1'}}
 \newcommand\FXFatal[1]{%
   \GenericWarning{%
     (FiXme)\@spaces\@spaces\@spaces\@spaces}{%
-    FiXme: `#1'}}
+    FiXme: '#1'}}
 
 %    \end{macrocode}
 % \subsubsection{Logging options}
